[package]
name = "search"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8"
gio = "0.8"
glib = "0.9"
gdk = "0.12"
fuzzy-matcher = "*"
